[gd_scene load_steps=7 format=2]

[ext_resource path="res://Room.gd" type="Script" id=1]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 300 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.0002, 31.9999 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512, 20 )

[node name="Room" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 512, 300 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Platform" parent="." instance=ExtResource( 2 )]
position = Vector2( 286.999, 334.832 )

[node name="Platform2" parent="." instance=ExtResource( 2 )]
position = Vector2( 783.026, 438.274 )

[node name="Ceiling" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 512, -24 )
scale = Vector2( 16, 1 )

[node name="Sprite" type="Sprite" parent="Ceiling"]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="RoomCheck" type="RayCast2D" parent="."]
position = Vector2( 512, 300 )
enabled = true
cast_to = Vector2( 1024, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="DeathArea" type="Area2D" parent="."]
position = Vector2( 512, 660 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="DeathArea" to="." method="_on_DeathArea_body_entered"]
